# qurator

./: .gitignore  Makefile  PLAN.md  README.md  SUBMIT.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/cache/: demo_run.json
backend/qurator/: __init__.py  api.py  apply.py  candidates.py  cli.py  config.py  costprobe.py  db.py  model.py  pipeline.py  qubo.py  seed.py  workload.py
backend/qurator/solvers/: __init__.py  classical.py  qaoa.py  qubo_solver.py
backend/tests/: test_classical.py  test_qaoa.py  test_qubo.py
db/: Dockerfile
db/init/: 01_extensions.sql  02_schema.sql
docs/: DEPLOY.md  SUBMISSION.md
frontend/public/: demo_run.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EnergyChart.tsx  InteractionGraph.tsx  LatencyBars.tsx  ProbabilityCloud.tsx  ui.tsx
frontend/src/lib/: api.ts  types.ts  useRun.ts
