[project]
name = "qurator"
version = "0.1.0"
description = "Quantum optimization that picks your database indexes — QAOA index tuning advisor over live Postgres."
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "numpy>=2.0",
    "rich>=13.7",
    "faker>=30.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "websockets>=13.0",
]

[project.optional-dependencies]
# Quantum core — installed in Week 3 (`uv sync --extra quantum`). Kept optional so Week 1/2 iteration stays fast.
quantum = [
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "qiskit-algorithms>=0.3",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[project.scripts]
qurator = "qurator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qurator"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
